
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct bhnd_softc {int dummy; } ;
struct bhnd_resource {int dummy; } ;
struct bhnd_core_clkctl {scalar_t__ cc_pmu_dev; struct bhnd_resource* cc_res; int cc_dev; } ;
typedef scalar_t__ device_t ;


 int BHND_CCS_AREQ_MASK ;
 int BHND_CCS_ERSRC_REQ_MASK ;
 int BHND_CCS_FORCE_MASK ;
 int BHND_CLKCTL_LOCK (struct bhnd_core_clkctl*) ;
 int BHND_CLKCTL_SET_4 (struct bhnd_core_clkctl*,int,int) ;
 int BHND_CLKCTL_UNLOCK (struct bhnd_core_clkctl*) ;
 int BHND_SERVICE_PMU ;
 int EINVAL ;
 int GIANT_REQUIRED ;
 int M_BHND ;
 int bhnd_free_core_clkctl (struct bhnd_core_clkctl*) ;
 struct bhnd_core_clkctl* bhnd_get_pmu_info (scalar_t__) ;
 int bhnd_is_hw_suspended (int ) ;
 int bhnd_release_provider (scalar_t__,scalar_t__,int ) ;
 int bhnd_set_pmu_info (scalar_t__,int *) ;
 int device_get_nameunit (scalar_t__) ;
 scalar_t__ device_get_parent (scalar_t__) ;
 struct bhnd_softc* device_get_softc (scalar_t__) ;
 int free (struct bhnd_resource*,int ) ;
 int panic (char*,int ) ;

int
bhnd_generic_release_pmu(device_t dev, device_t child)
{
 struct bhnd_softc *sc;
 struct bhnd_core_clkctl *clkctl;
 struct bhnd_resource *r;
 device_t pmu_dev;

 GIANT_REQUIRED;

 sc = device_get_softc(dev);

 if (device_get_parent(child) != dev)
  return (EINVAL);

 clkctl = bhnd_get_pmu_info(child);
 if (clkctl == ((void*)0))
  panic("pmu over-release for %s", device_get_nameunit(child));





 if (!bhnd_is_hw_suspended(clkctl->cc_dev)) {
  BHND_CLKCTL_LOCK(clkctl);


  BHND_CLKCTL_SET_4(clkctl, 0x0, BHND_CCS_FORCE_MASK |
      BHND_CCS_AREQ_MASK | BHND_CCS_ERSRC_REQ_MASK);

  BHND_CLKCTL_UNLOCK(clkctl);
 }


 bhnd_set_pmu_info(child, ((void*)0));



 r = clkctl->cc_res;
 pmu_dev = clkctl->cc_pmu_dev;


 bhnd_free_core_clkctl(clkctl);


 free(r, M_BHND);


 bhnd_release_provider(child, pmu_dev, BHND_SERVICE_PMU);

 return (0);
}
